# agi-models

./: AGENTS.md  INTERESTING_FINDINGS.md  README.md  TODO.md  benchmark.py  bootstrap.sh  model.py  pyproject.toml  run_all.py  setup.sh  train.py
data/: manifest.json
docs/: DESIGN_V3_SHARED_MEMORY.md
logs/: 0171d9fb-527a-4b5b-9959-48d8efdbbf17.txt  0171d9fb-527a-4b5b-9959-48d8efdbbf17_manifest.json  0572ef7a-2e93-4e0f-9cdd-6d31a238ff56.txt  06067862-fe8e-4f20-9a6a-4a706d0901e8.txt  06067862-fe8e-4f20-9a6a-4a706d0901e8_ckpt.pt  06067862-fe8e-4f20-9a6a-4a706d0901e8_manifest.json  06067862-fe8e-4f20-9a6a-4a706d0901e8_model.int8.ptz  06067862-fe8e-4f20-9a6a-4a706d0901e8_model.pt  0dd06831-1fc1-4280-a441-62c96541192b.txt  0dd06831-1fc1-4280-a441-62c96541192b_ckpt.pt  0dd06831-1fc1-4280-a441-62c96541192b_manifest.json  0dd06831-1fc1-4280-a441-62c96541192b_model.int8.ptz  0dd06831-1fc1-4280-a441-62c96541192b_model.pt  1197ebd4-5e85-4499-a9a7-2fc1bb9303dd.txt  12f84bf6-2d2f-4d83-8d32-a4287c63e73e.txt  12f84bf6-2d2f-4d83-8d32-a4287c63e73e_manifest.json  12f84bf6-2d2f-4d83-8d32-a4287c63e73e_model.int8.ptz  142963ca-5666-46a1-961a-3ab88de800d8.txt  17af4021-53c4-42d2-9e8d-0d887d2c9194.txt  2ae354e6-5b71-44eb-bae3-c2594a615bfc.txt  2d5d5f83-c2a1-45a0-8fa9-bc8fb7f76e0d.txt  38c96583-425f-45aa-ab4a-7482293ba580.txt  3b8b0de4-a295-46ee-b7bc-d41c5562df2b.txt  45d8e4ab-ea9e-4827-aad4-8032e3be9474.txt  54b5579c-3a34-4fe3-8e71-7aa74c7f0712.txt  584db77d-79e2-4672-a366-67fa4cef2f28.txt  584db77d-79e2-4672-a366-67fa4cef2f28_manifest.json  5a070abf-de3d-4839-a5ea-21022b78f5c1.txt  (+37 more)
(+14 files in other folders)
